triggerFramework/main/default/objects/TriggerConfig__mdt/TriggerConfig__mdt.object-meta.xml
<CustomObject>
    <description>Binds implementation of the ITriggerHandler (or ITriggerSimpleHandler) to an sObject</description>
    <label>TriggerConfig</label>
    <pluralLabel>TriggerConfigs</pluralLabel>
</CustomObject>