triggerFramework/main/default/objects/TriggerConfig__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Main Trigger Handler off switch, overrides any custom toggle</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>