triggerFramework/main/default/objects/TriggerConfig__mdt/fields/OrderOfExecution__c.field-meta.xml
<CustomField>
    <fullName>OrderOfExecution__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Controls the order in which handlers are invoked if more than one handler is bound to the same sObject</description>
    <label>Order of Execution</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>