triggerFramework/main/default/objects/TriggerConfig__mdt/fields/Trigger_sObject__c.field-meta.xml
<CustomField>
    <fullName>Trigger_sObject__c</fullName>
    <description>Binding to sObject on which to execute the trigger handler</description>
    <label>Trigger sObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>TriggerConfigs</relationshipLabel>
    <relationshipName>TriggerConfigs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>