triggerFramework/main/default/objects/TriggerConfig__mdt/fields/Unit_Test_Only__c.field-meta.xml
<CustomField>
    <fullName>Unit_Test_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks record visible only in Unit Tests</description>
    <label>Unit Test Only</label>
    <type>Checkbox</type>
</CustomField>